src/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    UMINUS

Grammar

Rule 0     S' -> program
Rule 1     program -> PROGRAM COLON ID SEMICOLON program_content END
Rule 2     program_content -> declarations methods_list main_method
Rule 3     declarations -> DECIDS COLON vars_and_consts_declarations
Rule 4     declarations -> empty
Rule 5     vars_and_consts_declarations -> var_or_const_declaration
Rule 6     vars_and_consts_declarations -> var_or_const_declaration vars_and_consts_declarations
Rule 7     var_or_const_declaration -> ID COMMA ID_list COLON type SEMICOLON
Rule 8     var_or_const_declaration -> ID COLON type SEMICOLON
Rule 9     var_or_const_declaration -> ID ASSIGN expression SEMICOLON
Rule 10    ID_list -> ID
Rule 11    ID_list -> ID COMMA ID_list
Rule 12    type -> INT
Rule 13    type -> FLOAT
Rule 14    type -> BOOL
Rule 15    type -> STR
Rule 16    methods_list -> method_declaration methods_list
Rule 17    methods_list -> empty
Rule 18    method_declaration -> type_or_void ID LPAREN parameters_list RPAREN LBRACE block_content RBRACE
Rule 19    type_or_void -> type
Rule 20    type_or_void -> VOID
Rule 21    parameters_list -> parameter_list
Rule 22    parameters_list -> empty
Rule 23    parameter_list -> parameter
Rule 24    parameter_list -> parameter COMMA parameter_list
Rule 25    parameter -> type ID
Rule 26    main_method -> MAIN COLON main_body
Rule 27    main_body -> declarations statements
Rule 28    main_body -> statements
Rule 29    main_body -> empty
Rule 30    empty -> <empty>
Rule 31    statements -> statement
Rule 32    statements -> statement statements
Rule 33    statement -> assignment_statement
Rule 34    statement -> if_statement
Rule 35    statement -> while_statement
Rule 36    statement -> for_statement
Rule 37    statement -> print_statement
Rule 38    statement -> input_statement
Rule 39    statement -> return_statement
Rule 40    statement -> block_statement
Rule 41    assignment_statement -> assignment SEMICOLON
Rule 42    print_statement -> PRINT LPAREN expression_list RPAREN SEMICOLON
Rule 43    input_statement -> INPUT LPAREN variable_list RPAREN SEMICOLON
Rule 44    return_statement -> RETURN expression SEMICOLON
Rule 45    expression_list -> expression
Rule 46    expression_list -> expression COMMA expression_list
Rule 47    variable_list -> ID
Rule 48    variable_list -> ID COMMA variable_list
Rule 49    block_statement -> LBRACE block_content RBRACE
Rule 50    block_content -> declarations statements
Rule 51    block_content -> declarations
Rule 52    block_content -> statements
Rule 53    block_content -> empty
Rule 54    assignment -> ID ASSIGN expression
Rule 55    assignment -> ID INCREMENT
Rule 56    assignment -> ID DECREMENT
Rule 57    if_statement -> IF LPAREN condition RPAREN block_statement
Rule 58    if_statement -> IF LPAREN condition RPAREN block_statement ELSE block_statement
Rule 59    while_statement -> WHILE LPAREN condition RPAREN block_statement
Rule 60    for_statement -> FOR LPAREN assignment_statement condition SEMICOLON assignment RPAREN block_statement
Rule 61    condition -> expression comparison expression
Rule 62    condition -> NOT expression
Rule 63    comparison -> EQUALS
Rule 64    comparison -> NEQUALS
Rule 65    comparison -> GT
Rule 66    comparison -> LT
Rule 67    expression -> term
Rule 68    expression -> expression PLUS term
Rule 69    expression -> expression MINUS term
Rule 70    term -> factor
Rule 71    term -> term TIMES factor
Rule 72    term -> term DIVIDE factor
Rule 73    factor -> ID
Rule 74    factor -> NUMBER
Rule 75    factor -> STRING_LITERAL
Rule 76    factor -> BOOLEAN_LITERAL
Rule 77    factor -> LPAREN expression RPAREN
Rule 78    factor -> function_call
Rule 79    factor -> MINUS factor
Rule 80    function_call -> ID LPAREN expression_list RPAREN

Terminals, with rules where they appear

ASSIGN               : 9 54
BOOL                 : 14
BOOLEAN_LITERAL      : 76
COLON                : 1 3 7 8 26
COMMA                : 7 11 24 46 48
DECIDS               : 3
DECREMENT            : 56
DIVIDE               : 72
ELSE                 : 58
END                  : 1
EQUALS               : 63
FLOAT                : 13
FOR                  : 60
GT                   : 65
ID                   : 1 7 8 9 10 11 18 25 47 48 54 55 56 73 80
IF                   : 57 58
INCREMENT            : 55
INPUT                : 43
INT                  : 12
LBRACE               : 18 49
LPAREN               : 18 42 43 57 58 59 60 77 80
LT                   : 66
MAIN                 : 26
MINUS                : 69 79
NEQUALS              : 64
NOT                  : 62
NUMBER               : 74
PLUS                 : 68
PRINT                : 42
PROGRAM              : 1
RBRACE               : 18 49
RETURN               : 44
RPAREN               : 18 42 43 57 58 59 60 77 80
SEMICOLON            : 1 7 8 9 41 42 43 44 60
STR                  : 15
STRING_LITERAL       : 75
TIMES                : 71
UMINUS               : 
VOID                 : 20
WHILE                : 59
error                : 

Nonterminals, with rules where they appear

ID_list              : 7 11
assignment           : 41 60
assignment_statement : 33 60
block_content        : 18 49
block_statement      : 40 57 58 58 59 60
comparison           : 61
condition            : 57 58 59 60
declarations         : 2 27 50 51
empty                : 4 17 22 29 53
expression           : 9 44 45 46 54 61 61 62 68 69 77
expression_list      : 42 46 80
factor               : 70 71 72 79
for_statement        : 36
function_call        : 78
if_statement         : 34
input_statement      : 38
main_body            : 26
main_method          : 2
method_declaration   : 16
methods_list         : 2 16
parameter            : 23 24
parameter_list       : 21 24
parameters_list      : 18
print_statement      : 37
program              : 0
program_content      : 1
return_statement     : 39
statement            : 31 32
statements           : 27 28 32 50 52
term                 : 67 68 69 71 72
type                 : 7 8 19 25
type_or_void         : 18
var_or_const_declaration : 5 6
variable_list        : 43 48
vars_and_consts_declarations : 3 6
while_statement      : 35

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . PROGRAM COLON ID SEMICOLON program_content END

    PROGRAM         shift and go to state 2

    program                        shift and go to state 1

state 1

    (0) S' -> program .



state 2

    (1) program -> PROGRAM . COLON ID SEMICOLON program_content END

    COLON           shift and go to state 3


state 3

    (1) program -> PROGRAM COLON . ID SEMICOLON program_content END

    ID              shift and go to state 4


state 4

    (1) program -> PROGRAM COLON ID . SEMICOLON program_content END

    SEMICOLON       shift and go to state 5


state 5

    (1) program -> PROGRAM COLON ID SEMICOLON . program_content END
    (2) program_content -> . declarations methods_list main_method
    (3) declarations -> . DECIDS COLON vars_and_consts_declarations
    (4) declarations -> . empty
    (30) empty -> .

    DECIDS          shift and go to state 8
    VOID            reduce using rule 30 (empty -> .)
    INT             reduce using rule 30 (empty -> .)
    FLOAT           reduce using rule 30 (empty -> .)
    BOOL            reduce using rule 30 (empty -> .)
    STR             reduce using rule 30 (empty -> .)
    MAIN            reduce using rule 30 (empty -> .)

    program_content                shift and go to state 6
    declarations                   shift and go to state 7
    empty                          shift and go to state 9

state 6

    (1) program -> PROGRAM COLON ID SEMICOLON program_content . END

    END             shift and go to state 10


state 7

    (2) program_content -> declarations . methods_list main_method
    (16) methods_list -> . method_declaration methods_list
    (17) methods_list -> . empty
    (18) method_declaration -> . type_or_void ID LPAREN parameters_list RPAREN LBRACE block_content RBRACE
    (30) empty -> .
    (19) type_or_void -> . type
    (20) type_or_void -> . VOID
    (12) type -> . INT
    (13) type -> . FLOAT
    (14) type -> . BOOL
    (15) type -> . STR

    MAIN            reduce using rule 30 (empty -> .)
    VOID            shift and go to state 16
    INT             shift and go to state 17
    FLOAT           shift and go to state 18
    BOOL            shift and go to state 19
    STR             shift and go to state 20

    methods_list                   shift and go to state 11
    method_declaration             shift and go to state 12
    empty                          shift and go to state 13
    type_or_void                   shift and go to state 14
    type                           shift and go to state 15

state 8

    (3) declarations -> DECIDS . COLON vars_and_consts_declarations

    COLON           shift and go to state 21


state 9

    (4) declarations -> empty .

    VOID            reduce using rule 4 (declarations -> empty .)
    INT             reduce using rule 4 (declarations -> empty .)
    FLOAT           reduce using rule 4 (declarations -> empty .)
    BOOL            reduce using rule 4 (declarations -> empty .)
    STR             reduce using rule 4 (declarations -> empty .)
    MAIN            reduce using rule 4 (declarations -> empty .)


state 10

    (1) program -> PROGRAM COLON ID SEMICOLON program_content END .

    $end            reduce using rule 1 (program -> PROGRAM COLON ID SEMICOLON program_content END .)


state 11

    (2) program_content -> declarations methods_list . main_method
    (26) main_method -> . MAIN COLON main_body

    MAIN            shift and go to state 23

    main_method                    shift and go to state 22

state 12

    (16) methods_list -> method_declaration . methods_list
    (16) methods_list -> . method_declaration methods_list
    (17) methods_list -> . empty
    (18) method_declaration -> . type_or_void ID LPAREN parameters_list RPAREN LBRACE block_content RBRACE
    (30) empty -> .
    (19) type_or_void -> . type
    (20) type_or_void -> . VOID
    (12) type -> . INT
    (13) type -> . FLOAT
    (14) type -> . BOOL
    (15) type -> . STR

    MAIN            reduce using rule 30 (empty -> .)
    VOID            shift and go to state 16
    INT             shift and go to state 17
    FLOAT           shift and go to state 18
    BOOL            shift and go to state 19
    STR             shift and go to state 20

    method_declaration             shift and go to state 12
    methods_list                   shift and go to state 24
    empty                          shift and go to state 13
    type_or_void                   shift and go to state 14
    type                           shift and go to state 15

state 13

    (17) methods_list -> empty .

    MAIN            reduce using rule 17 (methods_list -> empty .)


state 14

    (18) method_declaration -> type_or_void . ID LPAREN parameters_list RPAREN LBRACE block_content RBRACE

    ID              shift and go to state 25


state 15

    (19) type_or_void -> type .

    ID              reduce using rule 19 (type_or_void -> type .)


state 16

    (20) type_or_void -> VOID .

    ID              reduce using rule 20 (type_or_void -> VOID .)


state 17

    (12) type -> INT .

    ID              reduce using rule 12 (type -> INT .)
    SEMICOLON       reduce using rule 12 (type -> INT .)


state 18

    (13) type -> FLOAT .

    ID              reduce using rule 13 (type -> FLOAT .)
    SEMICOLON       reduce using rule 13 (type -> FLOAT .)


state 19

    (14) type -> BOOL .

    ID              reduce using rule 14 (type -> BOOL .)
    SEMICOLON       reduce using rule 14 (type -> BOOL .)


state 20

    (15) type -> STR .

    ID              reduce using rule 15 (type -> STR .)
    SEMICOLON       reduce using rule 15 (type -> STR .)


state 21

    (3) declarations -> DECIDS COLON . vars_and_consts_declarations
    (5) vars_and_consts_declarations -> . var_or_const_declaration
    (6) vars_and_consts_declarations -> . var_or_const_declaration vars_and_consts_declarations
    (7) var_or_const_declaration -> . ID COMMA ID_list COLON type SEMICOLON
    (8) var_or_const_declaration -> . ID COLON type SEMICOLON
    (9) var_or_const_declaration -> . ID ASSIGN expression SEMICOLON

    ID              shift and go to state 28

    vars_and_consts_declarations   shift and go to state 26
    var_or_const_declaration       shift and go to state 27

state 22

    (2) program_content -> declarations methods_list main_method .

    END             reduce using rule 2 (program_content -> declarations methods_list main_method .)


state 23

    (26) main_method -> MAIN . COLON main_body

    COLON           shift and go to state 29


state 24

    (16) methods_list -> method_declaration methods_list .

    MAIN            reduce using rule 16 (methods_list -> method_declaration methods_list .)


state 25

    (18) method_declaration -> type_or_void ID . LPAREN parameters_list RPAREN LBRACE block_content RBRACE

    LPAREN          shift and go to state 30


state 26

    (3) declarations -> DECIDS COLON vars_and_consts_declarations .

    VOID            reduce using rule 3 (declarations -> DECIDS COLON vars_and_consts_declarations .)
    INT             reduce using rule 3 (declarations -> DECIDS COLON vars_and_consts_declarations .)
    FLOAT           reduce using rule 3 (declarations -> DECIDS COLON vars_and_consts_declarations .)
    BOOL            reduce using rule 3 (declarations -> DECIDS COLON vars_and_consts_declarations .)
    STR             reduce using rule 3 (declarations -> DECIDS COLON vars_and_consts_declarations .)
    MAIN            reduce using rule 3 (declarations -> DECIDS COLON vars_and_consts_declarations .)
    IF              reduce using rule 3 (declarations -> DECIDS COLON vars_and_consts_declarations .)
    WHILE           reduce using rule 3 (declarations -> DECIDS COLON vars_and_consts_declarations .)
    FOR             reduce using rule 3 (declarations -> DECIDS COLON vars_and_consts_declarations .)
    PRINT           reduce using rule 3 (declarations -> DECIDS COLON vars_and_consts_declarations .)
    INPUT           reduce using rule 3 (declarations -> DECIDS COLON vars_and_consts_declarations .)
    RETURN          reduce using rule 3 (declarations -> DECIDS COLON vars_and_consts_declarations .)
    LBRACE          reduce using rule 3 (declarations -> DECIDS COLON vars_and_consts_declarations .)
    ID              reduce using rule 3 (declarations -> DECIDS COLON vars_and_consts_declarations .)
    RBRACE          reduce using rule 3 (declarations -> DECIDS COLON vars_and_consts_declarations .)


state 27

    (5) vars_and_consts_declarations -> var_or_const_declaration .
    (6) vars_and_consts_declarations -> var_or_const_declaration . vars_and_consts_declarations
    (5) vars_and_consts_declarations -> . var_or_const_declaration
    (6) vars_and_consts_declarations -> . var_or_const_declaration vars_and_consts_declarations
    (7) var_or_const_declaration -> . ID COMMA ID_list COLON type SEMICOLON
    (8) var_or_const_declaration -> . ID COLON type SEMICOLON
    (9) var_or_const_declaration -> . ID ASSIGN expression SEMICOLON

  ! shift/reduce conflict for ID resolved as shift
    VOID            reduce using rule 5 (vars_and_consts_declarations -> var_or_const_declaration .)
    INT             reduce using rule 5 (vars_and_consts_declarations -> var_or_const_declaration .)
    FLOAT           reduce using rule 5 (vars_and_consts_declarations -> var_or_const_declaration .)
    BOOL            reduce using rule 5 (vars_and_consts_declarations -> var_or_const_declaration .)
    STR             reduce using rule 5 (vars_and_consts_declarations -> var_or_const_declaration .)
    MAIN            reduce using rule 5 (vars_and_consts_declarations -> var_or_const_declaration .)
    IF              reduce using rule 5 (vars_and_consts_declarations -> var_or_const_declaration .)
    WHILE           reduce using rule 5 (vars_and_consts_declarations -> var_or_const_declaration .)
    FOR             reduce using rule 5 (vars_and_consts_declarations -> var_or_const_declaration .)
    PRINT           reduce using rule 5 (vars_and_consts_declarations -> var_or_const_declaration .)
    INPUT           reduce using rule 5 (vars_and_consts_declarations -> var_or_const_declaration .)
    RETURN          reduce using rule 5 (vars_and_consts_declarations -> var_or_const_declaration .)
    LBRACE          reduce using rule 5 (vars_and_consts_declarations -> var_or_const_declaration .)
    RBRACE          reduce using rule 5 (vars_and_consts_declarations -> var_or_const_declaration .)
    ID              shift and go to state 28

  ! ID              [ reduce using rule 5 (vars_and_consts_declarations -> var_or_const_declaration .) ]

    var_or_const_declaration       shift and go to state 27
    vars_and_consts_declarations   shift and go to state 31

state 28

    (7) var_or_const_declaration -> ID . COMMA ID_list COLON type SEMICOLON
    (8) var_or_const_declaration -> ID . COLON type SEMICOLON
    (9) var_or_const_declaration -> ID . ASSIGN expression SEMICOLON

    COMMA           shift and go to state 32
    COLON           shift and go to state 33
    ASSIGN          shift and go to state 34


state 29

    (26) main_method -> MAIN COLON . main_body
    (27) main_body -> . declarations statements
    (28) main_body -> . statements
    (29) main_body -> . empty
    (3) declarations -> . DECIDS COLON vars_and_consts_declarations
    (4) declarations -> . empty
    (31) statements -> . statement
    (32) statements -> . statement statements
    (30) empty -> .
    (33) statement -> . assignment_statement
    (34) statement -> . if_statement
    (35) statement -> . while_statement
    (36) statement -> . for_statement
    (37) statement -> . print_statement
    (38) statement -> . input_statement
    (39) statement -> . return_statement
    (40) statement -> . block_statement
    (41) assignment_statement -> . assignment SEMICOLON
    (57) if_statement -> . IF LPAREN condition RPAREN block_statement
    (58) if_statement -> . IF LPAREN condition RPAREN block_statement ELSE block_statement
    (59) while_statement -> . WHILE LPAREN condition RPAREN block_statement
    (60) for_statement -> . FOR LPAREN assignment_statement condition SEMICOLON assignment RPAREN block_statement
    (42) print_statement -> . PRINT LPAREN expression_list RPAREN SEMICOLON
    (43) input_statement -> . INPUT LPAREN variable_list RPAREN SEMICOLON
    (44) return_statement -> . RETURN expression SEMICOLON
    (49) block_statement -> . LBRACE block_content RBRACE
    (54) assignment -> . ID ASSIGN expression
    (55) assignment -> . ID INCREMENT
    (56) assignment -> . ID DECREMENT

  ! shift/reduce conflict for IF resolved as shift
  ! shift/reduce conflict for WHILE resolved as shift
  ! shift/reduce conflict for FOR resolved as shift
  ! shift/reduce conflict for PRINT resolved as shift
  ! shift/reduce conflict for INPUT resolved as shift
  ! shift/reduce conflict for RETURN resolved as shift
  ! shift/reduce conflict for LBRACE resolved as shift
  ! shift/reduce conflict for ID resolved as shift
    DECIDS          shift and go to state 8
    END             reduce using rule 30 (empty -> .)
    IF              shift and go to state 49
    WHILE           shift and go to state 50
    FOR             shift and go to state 51
    PRINT           shift and go to state 52
    INPUT           shift and go to state 53
    RETURN          shift and go to state 54
    LBRACE          shift and go to state 55
    ID              shift and go to state 56

  ! IF              [ reduce using rule 30 (empty -> .) ]
  ! WHILE           [ reduce using rule 30 (empty -> .) ]
  ! FOR             [ reduce using rule 30 (empty -> .) ]
  ! PRINT           [ reduce using rule 30 (empty -> .) ]
  ! INPUT           [ reduce using rule 30 (empty -> .) ]
  ! RETURN          [ reduce using rule 30 (empty -> .) ]
  ! LBRACE          [ reduce using rule 30 (empty -> .) ]
  ! ID              [ reduce using rule 30 (empty -> .) ]

    main_body                      shift and go to state 35
    declarations                   shift and go to state 36
    statements                     shift and go to state 37
    empty                          shift and go to state 38
    statement                      shift and go to state 39
    assignment_statement           shift and go to state 40
    if_statement                   shift and go to state 41
    while_statement                shift and go to state 42
    for_statement                  shift and go to state 43
    print_statement                shift and go to state 44
    input_statement                shift and go to state 45
    return_statement               shift and go to state 46
    block_statement                shift and go to state 47
    assignment                     shift and go to state 48

state 30

    (18) method_declaration -> type_or_void ID LPAREN . parameters_list RPAREN LBRACE block_content RBRACE
    (21) parameters_list -> . parameter_list
    (22) parameters_list -> . empty
    (23) parameter_list -> . parameter
    (24) parameter_list -> . parameter COMMA parameter_list
    (30) empty -> .
    (25) parameter -> . type ID
    (12) type -> . INT
    (13) type -> . FLOAT
    (14) type -> . BOOL
    (15) type -> . STR

    RPAREN          reduce using rule 30 (empty -> .)
    INT             shift and go to state 17
    FLOAT           shift and go to state 18
    BOOL            shift and go to state 19
    STR             shift and go to state 20

    parameters_list                shift and go to state 57
    parameter_list                 shift and go to state 58
    empty                          shift and go to state 59
    parameter                      shift and go to state 60
    type                           shift and go to state 61

state 31

    (6) vars_and_consts_declarations -> var_or_const_declaration vars_and_consts_declarations .

    VOID            reduce using rule 6 (vars_and_consts_declarations -> var_or_const_declaration vars_and_consts_declarations .)
    INT             reduce using rule 6 (vars_and_consts_declarations -> var_or_const_declaration vars_and_consts_declarations .)
    FLOAT           reduce using rule 6 (vars_and_consts_declarations -> var_or_const_declaration vars_and_consts_declarations .)
    BOOL            reduce using rule 6 (vars_and_consts_declarations -> var_or_const_declaration vars_and_consts_declarations .)
    STR             reduce using rule 6 (vars_and_consts_declarations -> var_or_const_declaration vars_and_consts_declarations .)
    MAIN            reduce using rule 6 (vars_and_consts_declarations -> var_or_const_declaration vars_and_consts_declarations .)
    IF              reduce using rule 6 (vars_and_consts_declarations -> var_or_const_declaration vars_and_consts_declarations .)
    WHILE           reduce using rule 6 (vars_and_consts_declarations -> var_or_const_declaration vars_and_consts_declarations .)
    FOR             reduce using rule 6 (vars_and_consts_declarations -> var_or_const_declaration vars_and_consts_declarations .)
    PRINT           reduce using rule 6 (vars_and_consts_declarations -> var_or_const_declaration vars_and_consts_declarations .)
    INPUT           reduce using rule 6 (vars_and_consts_declarations -> var_or_const_declaration vars_and_consts_declarations .)
    RETURN          reduce using rule 6 (vars_and_consts_declarations -> var_or_const_declaration vars_and_consts_declarations .)
    LBRACE          reduce using rule 6 (vars_and_consts_declarations -> var_or_const_declaration vars_and_consts_declarations .)
    ID              reduce using rule 6 (vars_and_consts_declarations -> var_or_const_declaration vars_and_consts_declarations .)
    RBRACE          reduce using rule 6 (vars_and_consts_declarations -> var_or_const_declaration vars_and_consts_declarations .)


state 32

    (7) var_or_const_declaration -> ID COMMA . ID_list COLON type SEMICOLON
    (10) ID_list -> . ID
    (11) ID_list -> . ID COMMA ID_list

    ID              shift and go to state 62

    ID_list                        shift and go to state 63

state 33

    (8) var_or_const_declaration -> ID COLON . type SEMICOLON
    (12) type -> . INT
    (13) type -> . FLOAT
    (14) type -> . BOOL
    (15) type -> . STR

    INT             shift and go to state 17
    FLOAT           shift and go to state 18
    BOOL            shift and go to state 19
    STR             shift and go to state 20

    type                           shift and go to state 64

state 34

    (9) var_or_const_declaration -> ID ASSIGN . expression SEMICOLON
    (67) expression -> . term
    (68) expression -> . expression PLUS term
    (69) expression -> . expression MINUS term
    (70) term -> . factor
    (71) term -> . term TIMES factor
    (72) term -> . term DIVIDE factor
    (73) factor -> . ID
    (74) factor -> . NUMBER
    (75) factor -> . STRING_LITERAL
    (76) factor -> . BOOLEAN_LITERAL
    (77) factor -> . LPAREN expression RPAREN
    (78) factor -> . function_call
    (79) factor -> . MINUS factor
    (80) function_call -> . ID LPAREN expression_list RPAREN

    ID              shift and go to state 65
    NUMBER          shift and go to state 70
    STRING_LITERAL  shift and go to state 71
    BOOLEAN_LITERAL shift and go to state 72
    LPAREN          shift and go to state 73
    MINUS           shift and go to state 68

    expression                     shift and go to state 66
    term                           shift and go to state 67
    factor                         shift and go to state 69
    function_call                  shift and go to state 74

state 35

    (26) main_method -> MAIN COLON main_body .

    END             reduce using rule 26 (main_method -> MAIN COLON main_body .)


state 36

    (27) main_body -> declarations . statements
    (31) statements -> . statement
    (32) statements -> . statement statements
    (33) statement -> . assignment_statement
    (34) statement -> . if_statement
    (35) statement -> . while_statement
    (36) statement -> . for_statement
    (37) statement -> . print_statement
    (38) statement -> . input_statement
    (39) statement -> . return_statement
    (40) statement -> . block_statement
    (41) assignment_statement -> . assignment SEMICOLON
    (57) if_statement -> . IF LPAREN condition RPAREN block_statement
    (58) if_statement -> . IF LPAREN condition RPAREN block_statement ELSE block_statement
    (59) while_statement -> . WHILE LPAREN condition RPAREN block_statement
    (60) for_statement -> . FOR LPAREN assignment_statement condition SEMICOLON assignment RPAREN block_statement
    (42) print_statement -> . PRINT LPAREN expression_list RPAREN SEMICOLON
    (43) input_statement -> . INPUT LPAREN variable_list RPAREN SEMICOLON
    (44) return_statement -> . RETURN expression SEMICOLON
    (49) block_statement -> . LBRACE block_content RBRACE
    (54) assignment -> . ID ASSIGN expression
    (55) assignment -> . ID INCREMENT
    (56) assignment -> . ID DECREMENT

    IF              shift and go to state 49
    WHILE           shift and go to state 50
    FOR             shift and go to state 51
    PRINT           shift and go to state 52
    INPUT           shift and go to state 53
    RETURN          shift and go to state 54
    LBRACE          shift and go to state 55
    ID              shift and go to state 56

    statements                     shift and go to state 75
    statement                      shift and go to state 39
    assignment_statement           shift and go to state 40
    if_statement                   shift and go to state 41
    while_statement                shift and go to state 42
    for_statement                  shift and go to state 43
    print_statement                shift and go to state 44
    input_statement                shift and go to state 45
    return_statement               shift and go to state 46
    block_statement                shift and go to state 47
    assignment                     shift and go to state 48

state 37

    (28) main_body -> statements .

    END             reduce using rule 28 (main_body -> statements .)


state 38

    (29) main_body -> empty .
    (4) declarations -> empty .

    END             reduce using rule 29 (main_body -> empty .)
    IF              reduce using rule 4 (declarations -> empty .)
    WHILE           reduce using rule 4 (declarations -> empty .)
    FOR             reduce using rule 4 (declarations -> empty .)
    PRINT           reduce using rule 4 (declarations -> empty .)
    INPUT           reduce using rule 4 (declarations -> empty .)
    RETURN          reduce using rule 4 (declarations -> empty .)
    LBRACE          reduce using rule 4 (declarations -> empty .)
    ID              reduce using rule 4 (declarations -> empty .)


state 39

    (31) statements -> statement .
    (32) statements -> statement . statements
    (31) statements -> . statement
    (32) statements -> . statement statements
    (33) statement -> . assignment_statement
    (34) statement -> . if_statement
    (35) statement -> . while_statement
    (36) statement -> . for_statement
    (37) statement -> . print_statement
    (38) statement -> . input_statement
    (39) statement -> . return_statement
    (40) statement -> . block_statement
    (41) assignment_statement -> . assignment SEMICOLON
    (57) if_statement -> . IF LPAREN condition RPAREN block_statement
    (58) if_statement -> . IF LPAREN condition RPAREN block_statement ELSE block_statement
    (59) while_statement -> . WHILE LPAREN condition RPAREN block_statement
    (60) for_statement -> . FOR LPAREN assignment_statement condition SEMICOLON assignment RPAREN block_statement
    (42) print_statement -> . PRINT LPAREN expression_list RPAREN SEMICOLON
    (43) input_statement -> . INPUT LPAREN variable_list RPAREN SEMICOLON
    (44) return_statement -> . RETURN expression SEMICOLON
    (49) block_statement -> . LBRACE block_content RBRACE
    (54) assignment -> . ID ASSIGN expression
    (55) assignment -> . ID INCREMENT
    (56) assignment -> . ID DECREMENT

    END             reduce using rule 31 (statements -> statement .)
    RBRACE          reduce using rule 31 (statements -> statement .)
    IF              shift and go to state 49
    WHILE           shift and go to state 50
    FOR             shift and go to state 51
    PRINT           shift and go to state 52
    INPUT           shift and go to state 53
    RETURN          shift and go to state 54
    LBRACE          shift and go to state 55
    ID              shift and go to state 56

    statement                      shift and go to state 39
    statements                     shift and go to state 76
    assignment_statement           shift and go to state 40
    if_statement                   shift and go to state 41
    while_statement                shift and go to state 42
    for_statement                  shift and go to state 43
    print_statement                shift and go to state 44
    input_statement                shift and go to state 45
    return_statement               shift and go to state 46
    block_statement                shift and go to state 47
    assignment                     shift and go to state 48

state 40

    (33) statement -> assignment_statement .

    IF              reduce using rule 33 (statement -> assignment_statement .)
    WHILE           reduce using rule 33 (statement -> assignment_statement .)
    FOR             reduce using rule 33 (statement -> assignment_statement .)
    PRINT           reduce using rule 33 (statement -> assignment_statement .)
    INPUT           reduce using rule 33 (statement -> assignment_statement .)
    RETURN          reduce using rule 33 (statement -> assignment_statement .)
    LBRACE          reduce using rule 33 (statement -> assignment_statement .)
    ID              reduce using rule 33 (statement -> assignment_statement .)
    END             reduce using rule 33 (statement -> assignment_statement .)
    RBRACE          reduce using rule 33 (statement -> assignment_statement .)


state 41

    (34) statement -> if_statement .

    IF              reduce using rule 34 (statement -> if_statement .)
    WHILE           reduce using rule 34 (statement -> if_statement .)
    FOR             reduce using rule 34 (statement -> if_statement .)
    PRINT           reduce using rule 34 (statement -> if_statement .)
    INPUT           reduce using rule 34 (statement -> if_statement .)
    RETURN          reduce using rule 34 (statement -> if_statement .)
    LBRACE          reduce using rule 34 (statement -> if_statement .)
    ID              reduce using rule 34 (statement -> if_statement .)
    END             reduce using rule 34 (statement -> if_statement .)
    RBRACE          reduce using rule 34 (statement -> if_statement .)


state 42

    (35) statement -> while_statement .

    IF              reduce using rule 35 (statement -> while_statement .)
    WHILE           reduce using rule 35 (statement -> while_statement .)
    FOR             reduce using rule 35 (statement -> while_statement .)
    PRINT           reduce using rule 35 (statement -> while_statement .)
    INPUT           reduce using rule 35 (statement -> while_statement .)
    RETURN          reduce using rule 35 (statement -> while_statement .)
    LBRACE          reduce using rule 35 (statement -> while_statement .)
    ID              reduce using rule 35 (statement -> while_statement .)
    END             reduce using rule 35 (statement -> while_statement .)
    RBRACE          reduce using rule 35 (statement -> while_statement .)


state 43

    (36) statement -> for_statement .

    IF              reduce using rule 36 (statement -> for_statement .)
    WHILE           reduce using rule 36 (statement -> for_statement .)
    FOR             reduce using rule 36 (statement -> for_statement .)
    PRINT           reduce using rule 36 (statement -> for_statement .)
    INPUT           reduce using rule 36 (statement -> for_statement .)
    RETURN          reduce using rule 36 (statement -> for_statement .)
    LBRACE          reduce using rule 36 (statement -> for_statement .)
    ID              reduce using rule 36 (statement -> for_statement .)
    END             reduce using rule 36 (statement -> for_statement .)
    RBRACE          reduce using rule 36 (statement -> for_statement .)


state 44

    (37) statement -> print_statement .

    IF              reduce using rule 37 (statement -> print_statement .)
    WHILE           reduce using rule 37 (statement -> print_statement .)
    FOR             reduce using rule 37 (statement -> print_statement .)
    PRINT           reduce using rule 37 (statement -> print_statement .)
    INPUT           reduce using rule 37 (statement -> print_statement .)
    RETURN          reduce using rule 37 (statement -> print_statement .)
    LBRACE          reduce using rule 37 (statement -> print_statement .)
    ID              reduce using rule 37 (statement -> print_statement .)
    END             reduce using rule 37 (statement -> print_statement .)
    RBRACE          reduce using rule 37 (statement -> print_statement .)


state 45

    (38) statement -> input_statement .

    IF              reduce using rule 38 (statement -> input_statement .)
    WHILE           reduce using rule 38 (statement -> input_statement .)
    FOR             reduce using rule 38 (statement -> input_statement .)
    PRINT           reduce using rule 38 (statement -> input_statement .)
    INPUT           reduce using rule 38 (statement -> input_statement .)
    RETURN          reduce using rule 38 (statement -> input_statement .)
    LBRACE          reduce using rule 38 (statement -> input_statement .)
    ID              reduce using rule 38 (statement -> input_statement .)
    END             reduce using rule 38 (statement -> input_statement .)
    RBRACE          reduce using rule 38 (statement -> input_statement .)


state 46

    (39) statement -> return_statement .

    IF              reduce using rule 39 (statement -> return_statement .)
    WHILE           reduce using rule 39 (statement -> return_statement .)
    FOR             reduce using rule 39 (statement -> return_statement .)
    PRINT           reduce using rule 39 (statement -> return_statement .)
    INPUT           reduce using rule 39 (statement -> return_statement .)
    RETURN          reduce using rule 39 (statement -> return_statement .)
    LBRACE          reduce using rule 39 (statement -> return_statement .)
    ID              reduce using rule 39 (statement -> return_statement .)
    END             reduce using rule 39 (statement -> return_statement .)
    RBRACE          reduce using rule 39 (statement -> return_statement .)


state 47

    (40) statement -> block_statement .

    IF              reduce using rule 40 (statement -> block_statement .)
    WHILE           reduce using rule 40 (statement -> block_statement .)
    FOR             reduce using rule 40 (statement -> block_statement .)
    PRINT           reduce using rule 40 (statement -> block_statement .)
    INPUT           reduce using rule 40 (statement -> block_statement .)
    RETURN          reduce using rule 40 (statement -> block_statement .)
    LBRACE          reduce using rule 40 (statement -> block_statement .)
    ID              reduce using rule 40 (statement -> block_statement .)
    END             reduce using rule 40 (statement -> block_statement .)
    RBRACE          reduce using rule 40 (statement -> block_statement .)


state 48
